--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Wapdroid</string>
-    <string name="label_currentCID">current Cell ID:</string>
-    <string name="label_currentLAC">current Location Area Code:</string>
-    <string name="label_currentSSID">current Network:</string>
+    <string name="label_currentCID">Cell ID:</string>
+    <string name="label_currentLAC">Location Area Code:</string>
+    <string name="label_currentSSID">Network:</string>
     <string name="no_networks">no networks</string>
     <string name="no_cells">no cells</string>
     <string name="menu_resetPeregrine">reset Wapdroid</string>
