--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Wapdroid</string>
-    <string name="label_currentCID">Cell ID:</string>
-    <string name="label_currentLAC">Location Area Code:</string>
-    <string name="label_currentMNC">Carrier ID:</string>
-    <string name="label_currentMCC">Country Code:</string>
-    <string name="label_currentSSID">Network:</string>
+    <string name="label_currentCID">Cell:</string>
+    <string name="label_currentLAC">Location:</string>
+    <string name="label_currentMNC">Carrier:</string>
+    <string name="label_currentMCC">Country:</string>
+    <string name="label_WIFI">WiFi</string>
+    <string name="label_wapdroidState">Manage WiFi</string>
     <string name="no_networks">no networks</string>
     <string name="no_cells">no cells</string>
     <string name="menu_resetPeregrine">reset Wapdroid</string>
+    <string name="menu_updateLocation">update location</string>
     <string name="menu_manageNetworks">manage networks</string>
     <string name="menu_manageCells">manage cells</string>
     <string name="menu_deleteNetwork">forget network</string>
