--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,16 +12,22 @@
     <string name="label_wapdroidState">Manage WiFi</string>
     <string name="no_networks">no networks</string>
     <string name="no_cells">no cells</string>
-    <string name="menu_resetWapdroid">reset Wapdroid</string>
-    <string name="menu_manageNetworks">manage networks</string>
-    <string name="menu_manageCells">manage cells</string>
-    <string name="menu_deleteNetwork">forget network</string>
-    <string name="menu_deleteCell">forget cell</string>
-    <string name="menu_refreshNetworks">refresh networks</string>
-    <string name="menu_refreshCells">refresh cells</string>
+    <string name="menu_resetWapdroid">Reset Wapdroid</string>
+    <string name="menu_manageNetworks">Manage networks</string>
+    <string name="menu_manageCells">Manage cells</string>
+    <string name="menu_deleteNetwork">Forget network</string>
+    <string name="menu_deleteCell">Forget cell</string>
+    <string name="menu_refreshNetworks">Refresh networks</string>
+    <string name="menu_refreshCells">Refresh cells</string>
     <string name="label_disabling">disabling</string>
     <string name="label_disabled">disabled</string>
     <string name="label_enabling">enabling</string>
     <string name="label_enabled">enabled</string>
     <string name="label_connectedto">connected to\u0020</string>
+    <string name="label_notify">Notifications</string>
+    <string name="menu_settings">Settings</string>
+    <string name="label_vibrate">Vibrate</string>
+    <string name="label_led">LED</string>
+    <string name="label_ringtone">Ringtone</string>
+    <string name="label_save">Save</string>
 </resources>
