--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -5,9 +5,6 @@
     <string name="label_LAC">位置:</string>
     <string name="label_MNC">运营商:</string>
     <string name="label_MCC">国家:</string>
-    <string name="label_RSSI">信号:</string>
-    <string name="label_minRSSI">最低信号:</string>
-    <string name="label_maxRSSI">最高信号:</string>
     <string name="label_WIFI">WiFi</string>
     <string name="label_wapdroidState">管理 WiFi</string>
     <string name="no_networks">没有网络连接</string>
@@ -24,10 +21,10 @@
     <string name="label_enabling">启用中</string>
     <string name="label_enabled">已启用</string>
     <string name="label_connectedto">已连接到\u0020</string>
-    <string name="label_notify">Notifications</string>
-    <string name="menu_settings">Settings</string>
-    <string name="label_vibrate">Vibrate</string>
+    <string name="label_notify">通知</string>
+    <string name="menu_settings">设置</string>
+    <string name="label_vibrate">振动</string>
     <string name="label_led">LED</string>
-    <string name="label_ringtone">Ringtone</string>
-    <string name="label_save">Save</string>
+    <string name="label_ringtone">铃声</string>
+    <string name="label_save">保存</string>
 </resources>
