--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -5,9 +5,6 @@
     <string name="label_LAC">位置:</string>
     <string name="label_MNC">運營商:</string>
     <string name="label_MCC">國家:</string>
-    <string name="label_RSSI">信號:</string>
-    <string name="label_minRSSI">最低信號:</string>
-    <string name="label_maxRSSI">最高信號:</string>
     <string name="label_WIFI">WiFi</string>
     <string name="label_wapdroidState">管理 WiFi</string>
     <string name="no_networks">沒有網路連線</string>
@@ -24,10 +21,10 @@
     <string name="label_enabling">啟用中</string>
     <string name="label_enabled">已啟用</string>
     <string name="label_connectedto">已連線到\u0020</string>
-    <string name="label_notify">Notifications</string>
-    <string name="menu_settings">Settings</string>
-    <string name="label_vibrate">Vibrate</string>
+    <string name="label_notify">通知</string>
+    <string name="menu_settings">設定</string>
+    <string name="label_vibrate">振動</string>
     <string name="label_led">LED</string>
-    <string name="label_ringtone">Ringtone</string>
-    <string name="label_save">Save</string>
+    <string name="label_ringtone">鈴聲</string>
+    <string name="label_save">儲存檔案</string>
 </resources>
