--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -15,11 +15,10 @@
     <string name="menu_deleteCell">忘記通信網路</string>
     <string name="menu_refreshNetworks">重新整理網路連線</string>
     <string name="menu_refreshCells">重新整理通信網路</string>
-    <string name="label_disabling">禁用中</string>
     <string name="label_disabled">已禁用</string>
-    <string name="label_enabling">啟用中</string>
     <string name="label_enabled">已啟用</string>
-    <string name="label_connectedto">已連線到\u0020</string>
+    <string name="label_disabling">禁用中</string>
+    <string name="label_enabling">啟用中</string>
     <string name="label_notify">通知</string>
     <string name="menu_settings">設定</string>
     <string name="label_vibrate">振動</string>
@@ -28,9 +27,11 @@
     <string name="label_save">儲存檔案</string>
     <string name="label_BSSID">BSSID:\u0020</string>
     <color name="green">#A4C639</color>
-    <color name="dk_green">#207018</color>
-    <color name="lt_green">#E2FF88</color>
     <color name="blue">#3C78D2</color>
-    <color name="dk_blue">#320FA3</color>
-    <color name="lt_blue">#CDB6F8</color>
+    <string name="key_preferences">wapdroid</string>
+    <string name="key_manageWifi">manageWifi</string>
+    <string name="key_notify">notify</string>
+    <string name="key_vibrate">vibrate</string>
+    <string name="key_led">led</string>
+    <string name="key_ringtone">ringtone</string>
 </resources>
