--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -28,6 +28,7 @@
     <string name="label_BSSID">BSSID:\u0020</string>
     <color name="green">#A4C639</color>
     <color name="blue">#3C78D2</color>
+    <color name="gray">#BFBFBF</color>
     <string name="key_preferences">wapdroid</string>
     <string name="key_manageWifi">manageWifi</string>
     <string name="key_notify">notify</string>
