--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -29,6 +29,7 @@
     <color name="green">#A4C639</color>
     <color name="blue">#3C78D2</color>
     <color name="gray">#BFBFBF</color>
+    <color name="bluedk">#320FA3</color>
     <string name="key_preferences">wapdroid</string>
     <string name="key_manageWifi">manageWifi</string>
     <string name="key_notify">notify</string>
