--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
  * Wapdroid - Android Location based Wifi Manager
  * Copyright (C) 2009 Bryan Emmanuel
@@ -45,10 +45,10 @@
     <string name="label_ringtone">铃声</string>
     <string name="label_save">保存</string>
     <string name="label_BSSID">BSSID:\u0020</string>
-    <string name="label_interval">Scan Interval</string>
-    <string name="scanning">scanning</string>
-    <string name="label_about">About</string>
-    <string name="label_donate">Donate</string>
-    <string name="about">Wapdroid runs in the background, recording cell towers near WiFi networks to which you connect. When in range of those towers, WiFi is turned on, otherwise it is turned off to save battery power. Please report issues or questions to http://wapdroid.com.\u000A\u000A</string>
-    <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
+    <string name="label_interval">扫描间隔</string>
+    <string name="scanning">扫描中</string>
+    <string name="label_about">关于</string>
+    <string name="label_donate">捐助</string>
+    <string name="about">Wapdroid 在后台运行, 可记录您使用的 WiFi 网络附近的手机信号接收塔。如果在手机在信号接收塔的范围之内, WiFi 就会自动开启, 其它时候则是关闭着以节省电量。请提交问题到 http://wapdroid.com.\u000A\u000A 谢谢！</string>
+    <string name="gpl">Wapdroid - 是基于Android Location 的 Wifi 管理器。\u000A\u000A版权 (C) 2009 Bryan Emmanuel\u000A\u000A该软件是免费的: 您可以根据自由软件基金会的 GNU 通用公共许可证发布和修改软件；您可以选择遵守许可证的第三版或更高版。\u000A\u000A发布该软件是希望对大家有用, 但是不做任何保证, 甚至没有适销性或适用某一特定用途的默示保证。 了解更多详情请查看 GNU 通用公共许可证。\u000A\u000A您应该会收到该软件附着的 GNU 通用公共许可证。  如果没有请查看 \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
 </resources>
