--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -45,10 +45,10 @@
     <string name="label_ringtone">鈴聲</string>
     <string name="label_save">儲存檔案</string>
     <string name="label_BSSID">BSSID:\u0020</string>
-    <string name="label_interval">Scan Interval</string>
-    <string name="scanning">scanning</string>
-    <string name="label_about">About</string>
-    <string name="label_donate">Donate</string>
-    <string name="about">Wapdroid runs in the background, recording cell towers near WiFi networks to which you connect. When in range of those towers, WiFi is turned on, otherwise it is turned off to save battery power. Please report issues or questions to http://wapdroid.com.\u000A\u000A</string>
-    <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
+    <string name="label_interval">掃瞄間隔</string>
+    <string name="scanning">掃瞄中</string>
+    <string name="label_about">關於</string>
+    <string name="label_donate">捐助</string>
+    <string name="about">Wapdroid 在後台執行, 可記錄您使用的 WiFi 網路附近的手機信號接收塔。如果在手機在信號接收塔的範圍之內, WiFi 就會自動開啟, 其它時候則是關閉著以節省電量。請提交問題到 http://wapdroid.com.\u000A\u000A 謝謝！</string>
+    <string name="gpl">Wapdroid - 是基於Android Location 的 Wifi 管理員。\u000A\u000A版權 (C) 2009 Bryan Emmanuel\u000A\u000A該軟體是免費的: 您可以依自由軟體基金會的 GNU 通用公共授權證發佈和修改軟體；您可以選擇遵守授權證的第三版或更高版。\u000A\u000A發佈該軟體是希望對大家有用, 但是不做任何保證, 甚至沒有適銷性或適用某一特定用途的默示保證。 瞭解更多詳情請檢視 GNU 通用公共授權證。\u000A\u000A您應該會收到該軟體附著的 GNU 通用公共授權證。  如果沒有請檢視 \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
 </resources>
