--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,12 +50,12 @@
     <string name="label_about">About</string>
     <string name="label_donate">Donate</string>
     <string name="menu_filter">Filter</string>
-    <string name="status">Status</string>
+    <string name="status">Status:</string>
     <string name="withinarea">within area</string>
     <string name="outofarea">out of area</string>
     <string name="map">Map</string>
     <string name="loading">Loading...</string>
-    <string name="range">Range</string>
+    <string name="range">Range:</string>
     <string name="dbm">\u0020dBm</string>
     <string name="colon">\u0020:\u0020</string>
     <string name="signal">Signal:</string>
