--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,6 +68,10 @@
     <string name="map_cell">Map cell</string>
     <string name="linefeed">\u000A</string>
     <string name="close">Close</string>
+    <string name="pref_service">Service Settings</string>
+    <string name="pref_notifications">Notification Settings</string>
+    <string name="pref_battery">Battery Settings</string>
+    <string name="pref_noclear">Always show icon in status bar</string>
     <string name="cellwarning">Multiple cells may share the same location.\u000A</string>
     <string name="background_info">When Wapdroid is managing Wi-Fi, use the Wi-Fi button found in the Menu options in Wapdroid to temporarily override control.\u000A\u000AWapdroid responds best when\u000AWi-Fi sleep policy is set to Never, found under Android Settings, Wireless \u0026 networks, Wi-Fi settings, Menu button, Advanced.</string>
     <string name="service_info">To automatically manage Wi-Fi, the service must be enabled in the Wapdroid Settings, but pressing menu, then Settings, then checking Manage Wi-Fi.</string>
