--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="label_enabled">enabled</string>
     <string name="label_disabling">disabling</string>
     <string name="label_enabling">enabling</string>
-    <string name="label_notify">Always show icon in status bar</string>
+    <string name="label_notify">Notifications</string>
     <string name="menu_settings">Settings</string>
     <string name="label_vibrate">Vibrate</string>
     <string name="label_led">LED</string>
@@ -71,6 +71,7 @@
     <string name="pref_service">Service Settings</string>
     <string name="pref_notifications">Notification Settings</string>
     <string name="pref_battery">Battery Settings</string>
+    <string name="label_persistent_status">Always show icon in status bar</string>
     <string name="cellwarning">Multiple cells may share the same location.\u000A</string>
     <string name="background_info">When Wapdroid is managing Wi-Fi, use the Wi-Fi button found in the Menu options in Wapdroid to temporarily override control.\u000A\u000AWapdroid responds best when\u000AWi-Fi sleep policy is set to Never, found under Android Settings, Wireless \u0026 networks, Wi-Fi settings, Menu button, Advanced.</string>
     <string name="service_info">To automatically manage Wi-Fi, the service must be enabled in the Wapdroid Settings, but pressing menu, then Settings, then checking Manage Wi-Fi.</string>
