language/db updt

--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -24,36 +24,56 @@
     <string name="label_LAC">位置:</string>
     <string name="label_MNC">運營商:</string>
     <string name="label_MCC">國家:</string>
-    <string name="label_WIFI">WiFi</string>
-    <string name="label_wapdroidState">管理 WiFi</string>
-    <string name="no_networks">沒有網路連線</string>
+    <string name="label_WIFI">Wi-Fi</string>
+    <string name="label_wapdroidState">管理 Wi-Fi</string>
+    <string name="no_networks">沒有網路</string>
     <string name="no_cells">沒有通信網路</string>
     <string name="menu_manageNetworks">管理網路連線</string>
-    <string name="menu_manageCells">管理通信網路</string>
-    <string name="menu_deleteNetwork">忘記網路連線</string>
-    <string name="menu_deleteCell">忘記通信網路</string>
-    <string name="menu_refreshNetworks">重新整理網路連線</string>
-    <string name="menu_refreshCells">重新整理通信網路</string>
+    <string name="menu_manageCells">管理電集區</string>
+    <string name="menu_deleteNetwork">略過網路連線</string>
+    <string name="menu_deleteCell">略過位置</string>
+    <string name="menu_refreshNetworks">重新整理網路</string>
+    <string name="menu_refreshCells">Refresh cells</string>
     <string name="label_disabled">已禁用</string>
     <string name="label_enabled">已啟用</string>
     <string name="label_disabling">禁用中</string>
     <string name="label_enabling">啟用中</string>
-    <string name="label_notify">通知</string>
+    <string name="label_notify">始終在狀態列顯示圖示</string>
     <string name="menu_settings">設定</string>
     <string name="label_vibrate">振動</string>
     <string name="label_led">LED</string>
     <string name="label_ringtone">鈴聲</string>
     <string name="label_save">儲存檔案</string>
     <string name="label_BSSID">BSSID:\u0020</string>
-    <string name="label_interval">掃瞄間隔</string>
-    <string name="scanning">掃瞄中</string>
+    <string name="label_interval">背景區間</string>
+    <string name="scanning">掃瞄</string>
     <string name="label_about">關於</string>
-    <string name="label_donate">捐助</string>
-    <string name="menu_filter">Filter</string>
-    <string name="status">Status</string>
-    <string name="accessible">accessible</string>
-    <string name="inaccessible">inaccessible</string>
-    <string name="map">map</string>
-    <string name="about">Wapdroid 在後台執行, 可記錄您使用的 WiFi 網路附近的手機信號接收塔。如果在手機在信號接收塔的範圍之內, WiFi 就會自動開啟, 其它時候則是關閉著以節省電量。請提交問題到 http://wapdroid.com.\u000A\u000A 謝謝！</string>
-    <string name="gpl">Wapdroid - 是基於Android Location 的 Wifi 管理員。\u000A\u000A版權 (C) 2009 Bryan Emmanuel\u000A\u000A該軟體是免費的: 您可以依自由軟體基金會的 GNU 通用公共授權證發佈和修改軟體；您可以選擇遵守授權證的第三版或更高版。\u000A\u000A發佈該軟體是希望對大家有用, 但是不做任何保證, 甚至沒有適銷性或適用某一特定用途的默示保證。 瞭解更多詳情請檢視 GNU 通用公共授權證。\u000A\u000A您應該會收到該軟體附著的 GNU 通用公共授權證。  如果沒有請檢視 \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
+    <string name="label_donate">捐贈</string>
+    <string name="menu_filter">篩選器</string>
+    <string name="status">狀態:</string>
+    <string name="withinarea">區網網網域</string>
+    <string name="outofarea">結束該區</string>
+    <string name="loading">載入中...</string>
+    <string name="range">漫遊:</string>
+    <string name="dbm">\u0020dBm</string>
+    <string name="colon">\u0020:\u0020</string>
+    <string name="signal">指示燈:</string>
+    <string name="battery_remaining">電集區:</string>
+    <string name="battery_override">在低電壓時關閉 WiFi</string>
+    <string name="battery_percentage">電集區百分比</string>
+    <string name="connected">連線</string>
+    <string name="unknown">未知</string>
+    <string name="cancel">取消</string>
+    <string name="map_network">網路地圖</string>
+    <string name="map_cell">地圖位置</string>
+    <string name="linefeed">\u000A</string>
+    <string name="close">關閉</string>
+    <string name="pref_service">服務設定</string>
+    <string name="pref_notifications">通知設定</string>
+    <string name="pref_battery">電集區設定</string>
+    <string name="cellwarning">多個網路可能具有相同的位置.\u000A</string>
+    <string name="background_info">當使用 Wapdroid 管理 Wi-Fi 時, 使用的Wi - Fi的按鈕，在 Wapdroid 功能表中選擇暫時覆寫控制。\u000A\u000AWapdroid 當回應時\u000AWi-Fi 睡眠策略設定為從不, 在 Android 設定下找到, Wireless \u0026 網路, Wi-Fi 設定, 功能表按鈕, 進階。</string>
+    <string name="service_info">要自動管理 Wi - Fi, 該服務必須在設定中啟用 Wapdroid, 但按功能表, 設定, 然後檢查管理 Wi-Fi。</string>
+    <string name="about">Wapdroid 在後台執行, 在您連線附近的 Wi - Fi 網路時記錄電集區電量。在範圍內, WiFi 開啟, 否則, 關閉以節省電集區電量。請報告問題或提問 http://wapdroid.com.\u000A\u000A</string>
+    <string name="gpl">Wapdroid - Android 基於位置的無線上網管理\u000A\u000A版權所有 (C) 2009 Bryan Emmanuel\u000A\u000A這個程式是免費軟體: 您可以依GNU通用公共授權證由自由軟體基金會所發表的角度來重新發佈與修改, 或者用授權證版本3, 或 (依您的選擇) 任何新版本。\u000A\u000A這一方案發佈是希望這將是有益的, 但沒有任何保證;亦無對適售性或針對特定目而隱含的保證。詳情請參閱 GNU 通用公共授權證。\u000A\u000A您應該已經收到一份 GNU 通用公共授權證的副本連同本程。如果沒有, 見 \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
 </resources>
