--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -78,11 +78,11 @@
     <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
     <string name="sql_equalsvalue">%s=%s</string>
     <string name="sql_equalsquotedvalue">%s=\u0022%s\u0022</string>
-    <string name="sql_fetchnetwork">%s and (%s or %s=\u0022\u0022)</string>
+    <string name="sql_fetchnetwork">%s=\u0022%s\u0022 and (%s=\u0022%s\u0022 or %s=\u0022\u0022)</string>
     <string name="sql_fetchcell">%s and (%s or %s)</string>
     <string name="sql_fetchpair">%s and %s</string>
-    <string name="sql_fetchrange">%s and (%s or %s)</string>
+    <string name="sql_fetchrange">%s=%s and (%s=%s or %s=%s)</string>
     <string name="sql_fetchrangewithrssi">%s and (((%s) or (%s\u003C=%s)) and (%s\u003E=%s))</string>
     <string name="sql_cells_and"> and ((%s and (%s or %s))</string>
-    <string name="sql_cells_or"> or (%s and (%s or %s))</string>
+    <string name="sql_cells_or"> or (%s=%s and (%s=%s or %s=%s))</string>
 </resources>
