--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,12 +28,12 @@
     <string name="label_wapdroidState">Manage Wi-Fi</string>
     <string name="no_networks">no networks</string>
     <string name="no_cells">no cells</string>
-    <string name="menu_manageNetworks">Manage networks</string>
-    <string name="menu_manageCells">Manage cells</string>
-    <string name="menu_deleteNetwork">Forget network</string>
-    <string name="menu_deleteCell">Forget cell</string>
-    <string name="menu_refreshNetworks">Refresh networks</string>
-    <string name="menu_refreshCells">Refresh cells</string>
+    <string name="manage">Manage %ss</string>
+    <string name="forget">Forget %s</string>
+    <string name="refresh">Refresh %ss</string>
+    <string name="map">Map %s</string>
+    <string name="network">network</string>
+    <string name="cell">cell</string>
     <string name="label_disabled">disabled</string>
     <string name="label_enabled">enabled</string>
     <string name="label_disabling">disabling</string>
@@ -63,10 +63,7 @@
     <string name="battery_percentage">Battery percentage</string>
     <string name="connected">connected</string>
     <string name="unknown">unknown</string>
-    <string name="map_network">Map network</string>
-    <string name="map_cell">Map cell</string>
     <string name="linefeed">\u000A</string>
-    <string name="close">Close</string>
     <string name="pref_service">Service Settings</string>
     <string name="pref_notifications">Notification Settings</string>
     <string name="pref_battery">Battery Settings</string>
