--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,11 +68,11 @@
     <string name="pref_battery">Battery Settings</string>
     <string name="label_persistent_status">Always show icon in status bar</string>
     <string name="cellwarning">Multiple cells may share the same location.\u000A</string>
-    <string name="background_info">When Wapdroid is managing Wi-Fi, use the Wi-Fi button found in the Menu options in Wapdroid to temporarily override control.\u000A\u000AWapdroid responds best when\u000AWi-Fi sleep policy is set to Never, found under Android Settings, Wireless \u0026 networks, Wi-Fi settings, Menu button, Advanced.</string>
+    <string name="background_info">When Wapdroid is managing Wi-Fi, use the Wi-Fi button found in the Menu options in Wapdroid to temporarily override control.\u000A\u000AWapdroid responds best when Wi-Fi sleep policy is set to Never, found under Android Settings, Wireless \u0026 networks, Wi-Fi settings, Menu button, Advanced.</string>
     <string name="service_info">To automatically manage Wi-Fi, the service must be enabled in the Wapdroid Settings, but pressing menu, then Settings, then checking Manage Wi-Fi.</string>
     <string name="about">Wapdroid runs in the background, recording cell towers near WiFi networks to which you connect. When in range of those towers, WiFi is turned on, otherwise it is turned off to save battery power. Please report issues or questions to http://wapdroid.com.\u000A\u000A</string>
     <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright (C) 2009 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
-    <string name="label_wifi_sleep">WiFi off when screen off</string>
+    <string name="label_wifi_sleep">WiFi should be off when...</string>
     <string name="pref_wifi_sleep">WiFi sleep policy</string>
     <string name="widget_label">Wapdroid Service Widget</string>
     <string name="widget_on">On</string>
