--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="label_wapdroidState">Manage Wi-Fi</string>
     <string name="no_networks">no networks</string>
     <string name="no_cells">no cells</string>
-    <string name="manage">Manage %ss</string>
+    <string name="manage">View %ss</string>
     <string name="forget">Forget %s</string>
     <string name="refresh">Refresh %ss</string>
     <string name="map">Map %s</string>
@@ -77,6 +77,6 @@
     <string name="widget_label">Wapdroid Service Widget</string>
     <string name="widget_on">On</string>
     <string name="widget_off">Off</string>
-    <string name="manage_network">Manage network</string>
-    <string name="ignore_network">Ignore network</string>
+    <string name="manage_network">Manage this network</string>
+    <string name="ignore_network">Ignore this network</string>
 </resources>
