--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -72,12 +72,12 @@
     <string name="service_info">To automatically manage Wi-Fi, the service must be enabled in the Wapdroid Settings, by pressing menu, then Settings, then checking Manage Wi-Fi.</string>
     <string name="about">Wapdroid runs in the background, recording cell towers near WiFi networks to which you connect. When in range of those towers, WiFi is turned on, otherwise it is turned off to save battery power. Please report issues or questions to http://wapdroid.com.\u000A\u000A</string>
     <string name="gpl">Wapdroid - Android Location based Wifi Manager\u000A\u000ACopyright &#169; 2012 Bryan Emmanuel\u000A\u000AThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\u000A\u000AThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\u000A\u000AYou should have received a copy of the GNU General Public License along with this program.  If not, see \u003C\u000Ahttp://www.gnu.org/licenses/\u003E.\u000A\u000ABryan Emmanuel piusvelte@gmail.com</string>
-    <string name="pref_wifi_sleep">WiFi sleep policy</string>
-    <string name="label_wifi_sleep_screen">When screen is off</string>
-    <string name="label_wifi_sleep_mob_net">and mobile networks available</string>
+    <string name="pref_wifi_sleep">WiFi off when:</string>
+    <string name="label_wifi_sleep_screen">screen is off</string>
+    <string name="label_wifi_sleep_mob_net">and has mobile data</string>
     <string name="label_wifi_sleep_charging">and not charging</string>
-    <string name="pref_overrides">Enable WiFi overrides</string>
-    <string name="label_wifi_override_charging">When charging</string>
+    <string name="pref_overrides">WiFi always on when:</string>
+    <string name="label_wifi_override_charging">charging</string>
     <string name="widget_label">Wapdroid Service</string>
     <string name="widget_on">On</string>
     <string name="widget_off">Off</string>
