--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -89,4 +89,10 @@
     <string name="widget_off">Off</string>
     <string name="manage_item">Manage this %s</string>
     <string name="ignore_item">Ignore this %s</string>
+    <string name="pref_logging">LOGGING</string>
+    <string name="label_logging">Logging enabled</string>
+    <string name="label_send_log">Send log</string>
+    <string name="msg_stop_logging">Disable logging before sending the log.</string>
+    <string name="msg_no_log">No log found. Try enabling logging to create a log first.</string>
+    <string name="msg_logging">Turn logging off when not needed to avoid low storage.</string>
 </resources>
