--- a/core/res/values/strings.xml
+++ b/core/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="action_settings">Settings</string>
     <string name="tab_status">Status</string>
     <string name="tab_networks">Networks</string>
+    <string name="title_activity_network">NetworkActivity</string>
 
 </resources>
